View item of virtual store on fron end

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/item-dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/item-dialog.component.html
@@ -37,7 +37,7 @@
     }
 
     .item-info p {
-        min-height: 92px;
+        min-height: 80px;
     }
     .item-comment{
         background-color:#e8e6e2;
@@ -48,7 +48,7 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="item-detail-container">
-                <img src="../images/avatar.png" class="item-img-lg" />
+                <img src="{{screenShotPath}}/{{virtualStore.screenShotFileName}}" class="item-img-lg" />
                 <div class="item-info">
                     <h1>{{virtualStore.price}}$</h1>
                     <h2>{{virtualStore.title}}</h2>
