profile authorization for other users

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -124,34 +124,26 @@
             <div class="user-name">
                 <div [hidden]="!isUserHidden">
                     <h1> {{credential.firstName}} {{credential.lastName}} </h1>
-                    <a (click)="isUserHidden = false" *ngIf="isOwner" class="edit"><span><i class="fa fa-edit"></i>Edit Name</span> </a>
+                    <a *ngIf="isOwner" (click)="isUserHidden = false" class="edit"><span><i class="fa fa-edit"></i>Edit Name</span> </a>
                 </div>
-                <div [hidden]="isUserHidden">
+                <div [hidden]="isUserHidden" *ngIf="isOwner">
                     <input placeholder="First Name" [(ngModel)]="credential.firstName" type="text" />
                     <input placeholder="Last Name" [(ngModel)]="credential.lastName" type="text" />
                     <a (click)="isUserHidden = true">Cancel</a>
                     <button class="btn btn-primary" (click)="UpdateUserName()">Update</button>
                 </div>
             </div>
-            <!-- ================Credential================== -->
-            <!--<div [hidden]="!hasCredential">
-                <a (click)="openCredentialDialogBox()" class="edit"> Add Credentials </a>
-            </div>-->
-            <div [hidden]="hasCredential" class="credential">
+           
+            <div> 
                 <a>{{credential.title}}</a>
-                <a (click)="openCredentialDialogBox()" *ngIf="isOwner" class="edit"><span>Edit Credential</span> </a>
+                <a *ngIf="isOwner" (click)="openCredentialDialogBox()"  class="edit"><span>Edit Credential</span> </a>
             </div>
-            <!-- ================Description============= -->
-            <div [hidden]="!hasDescription">
-                <div [hidden]="!showDescription">
-                    <a (click)="showDescription = false" *ngIf="isOwner">Write Description about yourself</a>
-                </div>
-            </div>
-            <div [hidden]="(!hasDescription && !showDescription)">
+                      
+            <div [hidden]="(!showDescription)">
                 <div [innerHTML]="credential.description"></div>
-                <a class="edit" *ngIf="isOwner"><span (click)="showDescription = false">Write Description about yourself</span> </a>
+                <a *ngIf="isOwner" class="edit" ><span (click)="showDescription = false">Write Description about yourself</span> </a>
             </div>
-            <div class="description-panel" [hidden]="showDescription">
+            <div class="description-panel" [hidden]="showDescription" *ngIf="isOwner">
                 <quill-editor [(ngModel)]="credential.description" [ngModelOptions]="{standalone: true}"
                               [modules]="{toolbar: [['bold', 'italic', 'underline'], ['link', 'image']]}"
                               required name="answerField" #answerField="ngModel"></quill-editor>
