--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -83,7 +83,8 @@
             <ul class="credential-panel">
                 <li>
                     <div *ngIf="employmentExists">
-                        <i class="fa fa-suitcase"></i>{{employmentHtml}}'
+                        <i class="fa fa-suitcase"></i> <span innerHTML="{{employmentHtml}}"></span> 
+                        <a (click)='openEmploymentDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!employmentExists" (click)="openEmploymentDialogAnchor()" class="edit">
                         Add Employment
@@ -91,23 +92,26 @@
                 </li>
                 <li>
                     <div *ngIf="educationExists">
-                        <i class="fa fa-university"></i> {{educationHtml}}  <a (click)='openEmploymentDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
+                        <i class="fa fa-university"></i> <span innerHTML="{{educationHtml}}"></span>
+                        <a (click)='openEducationDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!educationExists" (click)="openEducationDialogAnchor()" class="edit">
                         Add Education
                     </a>
                 </li>
                 <li>
-                    <div *ngIf="placeExists" innerHtml='<i class="fa fa-home"></i> {{placeHtml}}'>
-
+                    <div *ngIf="placeExists">
+                        <i class="fa fa-home"></i> <span innerHTML="{{placeHtml}}"></span>
+                        <a (click)='openPlaceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!placeExists" (click)="openPlaceDialogAnchor()" class="edit">
                         Add Place
                     </a>
                 </li>
                 <li>
-                    <div *ngIf="otherExperienceExists" innerHTML='<i class="fa fa-cog"></i> {{othersHtml}}'>
-
+                    <div *ngIf="otherExperienceExists">
+                        <i class="fa fa-cog"></i> <span innerHTML="{{othersHtml}}"></span>
+                        <a (click)='openOtherexperienceDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!otherExperienceExists" (click)="openOtherexperienceDialogAnchor()" class="edit">
                         Add Others
